--- a/stylesocial.css
+++ b/stylesocial.css
@@ -1,27 +1,44 @@
 @charset "UTF-8";
 
-body{
+html, body{
     background-image: url(social/fundo-madeira.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    height: 99%;
-    width: 99%;
+    height: 100vh;
+    width: 100vw;
 }
-div{
-    background-image: url(social/frame-iphone.png);
+#redes-sociais{
+    margin-top: 2vh;
+    margin-right: 3vw;
+    text-align: right;
+}
+#redes-sociais img{
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.336);
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+}
+main{
+    position: relative;
+}
+#telefone{    
+    background-color: transparent;
+    background-image: url(social/frame-iphone1.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center right;
-    height: 132vh;
-    width: 36vw;
-    overflow-x: 600px;
+    background-position: center center;
+    position: absolute;
+    top: 116%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 432px;
+    width: 215px;
 }
-iframe{
-    padding-top: 17vh;
-    padding-left: 4vw;
-    height: 800px;
-    width: 600px;
-
+iframe{    
+    transform: translate(-6%, 14%);
+    height: 336px;
+    width: 190px;
+    border-radius: 10px;  
 }
