--- a/login/estilos/styleoutros.css
+++ b/login/estilos/styleoutros.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 600px) and (max-width:900px){
+@media screen and (min-width: 628px) and (max-width:799.99px){
     body{
         height: 97.3vh;
         width: 90vw;
@@ -11,22 +11,33 @@
     }
     section{
         width: 90vw;
-        position: absolute;
-        left: 63%;
-        transform: translate(-53%, 90%);
+        display: flex;
+        margin-left: 5%;
+        margin-right: 5%;
+        position: fixed;
+        flex-direction: row;
+        align-content: space-around;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: nowrap;
+        margin-top: 20%;
+        padding-bottom: 0px;
+    }    
     }
     div{
         display: inline-block;
         width: 350px;
-        height: 33vh;
+        height: 201px;
         margin: -10px;
         border-radius: 10px 10px 0px 10px;
     }
     form{
         display: inline-block;
-        width: 350px;
-        height: 32.2vh;
+        width: 371px;
+        height: 191px;
         border-radius: 0px 10px 10px 0px;
+        padding-bottom: 10px;
+        margin-top: 0px;
     }
     h1{
         font-size: 1.3em;
@@ -41,10 +52,16 @@
         padding: 2px;
         border-radius: 5px;
     }
+    #imail{
+        width: 40vw;
+    }
+    #isenha{
+        width: 40vw;
+    }
     #enter{
         margin: 1px;
         border-radius: 5px;
-        width: 40vw;
+        width: 46vw;
         color: white;
         background-color: var(--varcor3-1);
     }
@@ -54,15 +71,16 @@
     #ems{
         margin: 1px;
         border-radius: 5px;
-        width: 40vw;
+        width: 46vw;
     }
     #ems:hover{
         background-color: var(--varcor2-1);
         color: white;
     }
-}
 
-@media screen and (min-width: 1001px){
+
+
+@media screen and (min-width: 800px){
     body{
         height: 97.3vh;
         width: 90vw;
@@ -72,26 +90,70 @@
         position: relative;
     }
     section{
-        width: 90vw;
-        position: absolute;
-        left: 63%;
-        transform: translate(-53%, 90%);
+        width: 93vw;
+        display: flex;
+        margin: auto;
+        position: fixed;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: nowrap;
+        margin-top: 15%;
     }
     div{
         display: inline-block;
-        width: 412px;
-        height: 40vh;
-        margin: -10px;
-        border-radius: 10px 10px 0px 10px;
+        width: 391px;
+        height: 250px;
+        border-radius: 0px 10px 10px 00px;
         position: relative;
-        left: 54%;    
+        left: 48%;    
     }
     form{
         display: inline-block;
-        width: 350px;
-        height: 32.2vh;
-        border-radius: 0px 10px 10px 0px;
+        width: 397px;
+        height: 249px;
+        border-radius: 10px 0px 0px 10px;
         position: relative;
         left: -37%;
+        margin: 0px;
+        padding-bottom: 1px;
+    }
+    h1{
+        font-size: 2.5em;
+        margin: 5px;
+    }
+    p{
+        font-size: 1em;
+        margin: 3px;
+    }
+    
+    label{
+        background-color: var(--varcor1);
+    }
+    #imail{
+        width: 340px;
+    }
+    #isenha{
+        width: 340px;
+    }
+    #enter{
+        width: 390px;
+        background-color: var(--varcor2-1);
+        font-size: 1em;
+        margin: 3px;
+    }
+    #enter:hover{
+        background-color: var(--varcor2);
+    }
+    #ems{
+        width: 390px;
+        background-color: var(--varcor3-1);
+        color: white;
+        font-size: 1em;
+        margin: 3px;
+    }
+    #ems:hover{
+        background-color: var(--varcor3);
+        color: black;
     }
 }
