--- a/login/estilos/stylemobile.css
+++ b/login/estilos/stylemobile.css
@@ -10,7 +10,8 @@ cores secundarias
 #788452
 */
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --varcor1: #DC3D12;
     --varcor2: #008dbd;
     --varcor3: #AFD93F;
@@ -24,12 +25,13 @@ body{
     background-color: var(--varcor2);
 }
 main{
-    position: relative;
+    position: absolute;
 }
 section{
     width: 350px;
     display: block;
-    margin: auto;
+    margin-left: 26%;
+    margin-right: 10%;
     margin-top: 20%;
 }
 div{
@@ -39,17 +41,15 @@ div{
     background-size: cover;
     background-position: top;
     display: block;
-    width: 304px;
-    height: 170px;
+    width: 234px;
+    height: 166px;
     border-radius: 10px 10px 0px 0px;
 }
 form{    
-    display: block;
-    width: 344px;
-    height: 191px;
+    width: 230px;
+    height: 260px;
     border-radius: 0px 0px 10px 10px;
-    margin-left: -8px;
-    margin-top: 5px;
+    margin-left: 0px;
     padding-left: 4px;
     padding-bottom: 5px;
     background-color: white;
@@ -64,33 +64,35 @@ p{
 #imail{
     margin: 1px;
     border-radius: 10px;
-    width: 41vw;
+    width: 178px;
+    transform: translateY(-5px);
 }
 #isenha{
     border-radius: 10px;
     margin: 3px;
-    width: 41vw;
+    width: 178px;
+    transform: translateY(-5px);
 }
 #enter{
     margin: 1px;
     border-radius: 5px;
-    width: 50vw;
+    width: 225px;
     color: white;
-    background-color: var(--varcor2-1);
+    background-color: var(--varcor2);
 }
 #enter:hover{
-    background-color: var(--varcor2);
+    background-color: var(--varcor2-1);
 }
 #ems{
     margin: 1px;
     border-radius: 5px;
-    width: 50vw;
+    width: 225px;
 }
 #ems:hover{
     background-color: var(--varcor3);
 }
 label{
-    background-color: var(--varcor2);
+    background-color: var(--varcor1);
     display: block;
     margin: 5px;
     padding: 2px;
