--- a/login/estilos/styleoutros.css
+++ b/login/estilos/styleoutros.css
@@ -23,7 +23,7 @@
         margin-top: 20%;
         padding-bottom: 0px;
     }    
-    }
+    
     div{
         display: inline-block;
         width: 350px;
@@ -48,7 +48,7 @@
     label{
         background-color: var(--varcor3);
         display: block;
-        margin: 5px;
+        margin: 3px;
         padding: 2px;
         border-radius: 5px;
     }
@@ -67,6 +67,7 @@
     }
     #enter:hover{
         background-color: var(--varcor3);
+        color: black;
     }
     #ems{
         margin: 1px;
@@ -77,7 +78,7 @@
         background-color: var(--varcor2-1);
         color: white;
     }
-
+}
 
 
 @media screen and (min-width: 800px){
@@ -120,7 +121,7 @@
     }
     h1{
         font-size: 2.5em;
-        margin: 5px;
+        margin: 3px;
     }
     p{
         font-size: 1em;
@@ -140,7 +141,7 @@
         width: 390px;
         background-color: var(--varcor2-1);
         font-size: 1em;
-        margin: 3px;
+        margin: 1px;
     }
     #enter:hover{
         background-color: var(--varcor2);
@@ -150,7 +151,7 @@
         background-color: var(--varcor3-1);
         color: white;
         font-size: 1em;
-        margin: 3px;
+        margin: 1px;
     }
     #ems:hover{
         background-color: var(--varcor3);
